--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.datasource.username=sa
 spring.datasource.password=
 
 # JPA 하이버네이트 로그 레벨 설정
-logging.level.org.hibernate=info
-logging.level.org.springframework=info
+logging.level.org.hibernate=debug
+logging.level.org.springframework=debug
 
 #JPA 세팅
 spring.jpa.hibernate.ddl-auto=update
